# curt

./: .gitignore  CMakeLists.txt  LICENSE
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  util.h  vec3.h
src/: main.cc  test.cu
